# huelib2-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: delete_light.rs  discover.rs  get_all_lights.rs  register_user.rs  set_light_state.rs
src/: color.rs  error.rs  lib.rs  util.rs
src/bridge/: discover.rs  mod.rs  register.rs
src/resource/: config.rs  mod.rs
