[package]
name = "huelib"
description = "Rust bindings for the Philips Hue API"
version = "0.13.2"
authors = ["Niklas Sauter <niklas@n1ks.net>"]
edition = "2018"
repository = "https://github.com/nn1ks/huelib-rs"
readme = "README.md"
license = "MIT"
categories = ["api-bindings"]
keywords = ["philips", "hue", "light"]

[dependencies]
ureq = { version = "2.6.2", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_repr = "0.1.12"
serde_json = "1.0.96"
chrono = { version = "0.4.24", default-features = false, features = ["serde", "clock"] }
thiserror = "1.0.40"
derive_setters = "0.1.5"
serde-xml-rs = { version = "0.6.0", optional = true }
url = { version = "2.3.1", features = ["serde"], optional = true }
uuid = { version = "1.3.1", features = ["serde"], optional = true }
mime = { version = "0.3.17", optional = true }

[features]
upnp-description = ["serde-xml-rs", "url", "uuid", "mime"]
old-api = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
